src/objects/Parent_detail__c.object
<CustomObject>
    <description>Describe Parents</description>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <description>Contact Number for communication with Parents.</description>
        <label>Contact Number:</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email_ID__c</fullName>
        <description>Required Email ID for Communication</description>
        <label>Email ID</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <description>Details of parents occupation</description>
        <label>Occupation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_detail1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>2 Self relation ship</description>
        <label>Parent_detail1</label>
        <referenceTo>Parent_detail__c</referenceTo>
        <relationshipLabel>Parent_detail (Parent_detail1)</relationshipLabel>
        <relationshipName>Parent_detail1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>1 self Releation</description>
        <label>Parent_detail</label>
        <referenceTo>Parent_detail__c</referenceTo>
        <relationshipLabel>Parent_detail</relationshipLabel>
        <relationshipName>Parent_detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>Data Serial Number</description>
        <displayFormat>Ser-{0000}</displayFormat>
        <label>Serial Number:</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Stationary__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Stationary</label>
        <referenceTo>Stationary__c</referenceTo>
        <relationshipLabel>Parent_detail</relationshipLabel>
        <relationshipName>Parent_detail</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <description>Parents child relation</description>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Parent_detail</relationshipLabel>
        <relationshipName>Parent_detail</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tEACHER__c</fullName>
        <label>Teacher</label>
        <referenceTo>Teacher__c</referenceTo>
        <relationshipLabel>Parent_detail</relationshipLabel>
        <relationshipName>Parent_detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Parent_detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Parent_detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent_detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>